--- a/Wikipedia/style.css
+++ b/Wikipedia/style.css
@@ -1,3 +1,7 @@
+html {
+	height: 100%;
+}
+
 body {
 	margin: 30px;
 	text-align: center;
@@ -18,6 +22,16 @@ body {
     box-shadow: 5px 5px 12px #666;
 }
 
+.article:hover {
+	background: #bbb;
+}
+
 a {
 	color: #000;
+}
+
+@media screen and (max-width: 770px) {
+	.article {
+		width: 90%;
+	}
 }
