--- a/Wikipedia/style.css
+++ b/Wikipedia/style.css
@@ -6,7 +6,7 @@ body {
 	margin: 30px;
 	text-align: center;
 	font-family: "Lato";
-	background: #f6f6f6;
+	background: #895F8E;
 	background: linear-gradient(#895F8E, #fff) no-repeat;
 }
 
@@ -33,5 +33,8 @@ a {
 @media screen and (max-width: 770px) {
 	.article {
 		width: 90%;
+	}
+	body {
+		margin: 10px 0px;
 	}
 }
