--- a/Wikipedia/style.css
+++ b/Wikipedia/style.css
@@ -20,10 +20,12 @@ body {
     border-radius: 10px;
     border: 2px solid #000;
     box-shadow: 5px 5px 12px #666;
+    transition: background 2s, color 2s;
 }
 
 .article:hover {
-	background: #bbb;
+	background: #aaa;
+    color: #666;
 }
 
 a {
