--- a/Wikipedia/style.css
+++ b/Wikipedia/style.css
@@ -32,7 +32,7 @@ input#query {
 	transition: width 2s, font-size 2s;
 }
 
-input#query:hover {
+input#query:focus {
 	width: 200px;
     font-size: 30px;
 }
