--- a/CamperNews/style.css
+++ b/CamperNews/style.css
@@ -2,6 +2,11 @@ body {
 	margin: 10px;
 	text-align: center;
 	font-family: "Lato";
+	background: #fff;
+	background: -webkit-linear-gradient(#BCDAFF, #fff) fixed no-repeat; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#BCDAFF, #fff) fixed no-repeat; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#BCDAFF, #fff) fixed no-repeat; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#BCDAFF, #fff) fixed no-repeat;
 }
 
 h1 {
