lots of Qrappy changes

--- a/QrappyBird/app/views/gameView.html
+++ b/QrappyBird/app/views/gameView.html
@@ -1,7 +1,5 @@
+<p id="score">Score: {{ currentScore }}</p>
 <img id="bird" src="Images/flappy_bird.gif" />
-<img class="title" src="Images/logo.png" />
-<img class="instructions" src="Images/instructions.png" />
-
-<div class="allPipes">
-
-</div>
+<img id="title" src="Images/logo.png" />
+<img id="instructions" src="Images/instructions.png" />
+<div class="allPipes"></div>
