--- a/QrappyBird/app/views/scoreView.html
+++ b/QrappyBird/app/views/scoreView.html
@@ -1,1 +1,6 @@
-<p>Text here</p>
+<img id="scoreboard" src="Images/scoreboard.jpg" />
+<img id="medal" src="Images/medal.png" />
+<p id="thisScore">{{ currentScore }}</p>
+<p id="highscore">{{ highscore }}</p>
+<a ng-href="#/" id="again">Play Again</a>
+<a ng-href="#/highscores" id="topScores">Top Scores</a>
