--- a/QrappyBird/styles/style.css
+++ b/QrappyBird/styles/style.css
@@ -30,8 +30,9 @@ a:hover {
 #game {
     height: 383px;
     width: 770px;
-    background-color: #4CD5E0;
-    background-color: #70C4CE;
+    background: #71C5D0;
+    background: #71C5D0 url("../Images/bg.jpg") repeat-x center 60px;
+    background-size: contain;
     overflow: hidden;
     border-radius: 10px;
     margin: auto;
@@ -51,6 +52,18 @@ a:hover {
     position: absolute;
     right: 10px;
     text-shadow: 0px 0px 7px #fff;
+}
+
+#game p#playTheme {
+    text-align: right;
+    font-size: 20px;
+    z-index: 5;
+    position: absolute;
+    right: 10px;
+    bottom: 0px;
+    text-shadow: 0px 0px 7px #fff;
+    margin: 0px;
+    cursor: pointer;
 }
 
 #bird {
