--- a/QrappyBird/app/views/gameView.html
+++ b/QrappyBird/app/views/gameView.html
@@ -1,4 +1,5 @@
 <p id="score">Score: {{ currentScore }}</p>
+<p id="playTheme"></p>
 <img id="bird" src="Images/flappy_bird.gif" />
 <img id="title" src="Images/logo.png" />
 <img id="instructions" src="Images/instructions.png" />
