--- a/Multiplayer/public/style/game.css
+++ b/Multiplayer/public/style/game.css
@@ -4,4 +4,12 @@ body {
 
 canvas {
 	display: block;
+	margin: auto;
+    border: 5px solid #000;
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
