--- a/PixelTest/public/stylesheets/game.css
+++ b/PixelTest/public/stylesheets/game.css
@@ -1,15 +1,16 @@
 body {
 	overflow: hidden;
+	background: limegreen;
 }
 
 canvas {
-	display: block;
-	margin: auto;
+    display: block;
+    margin: auto;
     border: 5px solid #000;
-    border-radius: 10px;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    background: #ccc;
 }
