--- a/PixelTest/public/stylesheets/game.css
+++ b/PixelTest/public/stylesheets/game.css
@@ -1,16 +1,23 @@
+@font-face {
+    font-family: zig;
+    src: url('zig.ttf');
+}
+
 body {
 	overflow: hidden;
 	background: limegreen;
+    font-family: zig, Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    margin: 20px;
+    font-size: 36px;
 }
 
 canvas {
     display: block;
     margin: auto;
     border: 5px solid #000;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     background: #ccc;
 }
