--- a/comments/public/stylesheets/style.css
+++ b/comments/public/stylesheets/style.css
@@ -1,8 +1,18 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
   color: #00B7FF;
+}
+
+#commentForm {
+	width: 70%;
+    margin: auto;
+}
+
+#someButtons {
+	margin: auto;
 }
