--- a/comments/public/stylesheets/style.css
+++ b/comments/public/stylesheets/style.css
@@ -16,3 +16,10 @@ a {
 #someButtons {
 	margin: auto;
 }
+
+#afterSubmit {
+	background: lightblue;
+	margin: 10px;
+	padding: 10px;
+	margin: auto;
+}
