--- a/comments/public/stylesheets/style.css
+++ b/comments/public/stylesheets/style.css
@@ -19,7 +19,16 @@ a {
 
 #afterSubmit {
 	background: lightblue;
-	margin: 10px;
+    padding: 10px;
+    margin: 10px auto;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+.singleComment {
+	background: pink;
 	padding: 10px;
-	margin: auto;
+    margin: 10px auto;
+    display: inline-block;
+    border-radius: 5px;
 }
