--- a/MongoDBreakout/public/stylesheets/style.css
+++ b/MongoDBreakout/public/stylesheets/style.css
@@ -16,9 +16,13 @@ a {
 }
 
 #theGameCanvas {
-	height: 700px;
-	width: 500px;
+	height: 500px;
+	width: 300px;
 	background: #050505;
 	border: 5px solid #f1f1f1;
 	margin: auto;
+}
+
+h1 {
+	letter-spacing: 12px;
 }
