--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -1,3 +1,3 @@
-<canvas id="theGameCanvas" height="500" width="400"></canvas>
+<canvas id="gameCanvas" height="500" width="400"></canvas>
 
 <p>This is the game page</p>
