--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -1,4 +1,6 @@
-<a ng-href="#/game" id="again">Play Again</a>
-<a ng-href="#/highscores" id="topScores">Top Scores</a>
+<div ng-controller="authenticateController">
+	<a ng-href="#/game" id="again">Play Again</a>
+	<a ng-href="#/highscores" id="topScores">Top Scores</a>
 
-<p>This is the authentication page</p>
+	<p>This is the authentication page</p>
+</div>
