--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -1,3 +1,5 @@
-<canvas id="gameCanvas" height="500" width="410"></canvas>
-<p>Score: {{ score }}</p>
-<p>This is the game page</p>
+<div ng-controller="gameController">	
+	<canvas id="gameCanvas" height="500" width="410"></canvas>
+	<p>Score: {{ score }}</p>
+	<p>This is the game page</p>
+</div>
