--- a/MongoDBreakout/public/javascripts/app/views/highscoresView.html
+++ b/MongoDBreakout/public/javascripts/app/views/highscoresView.html
@@ -1,22 +1,24 @@
-<a ng-href="#/game" id="again">Play Again</a>
+<div ng-controller="highscoresController">	
+	<a ng-href="#/game" id="again">Play Again</a>
 
-<p>This is the high scores page</p>
+	<p>This is the high scores page</p>
 
-<!--
+	<!--
 
-<table>
-	<thead>
-		<tr>
-			<th>Position</th>
-			<th>Score</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="score in scores | orderBy: score : reverse track by $index" ng-show="$index < 5">
-			<td>#{{ $index + 1 }}</td>
-			<td>{{ score }}</td>
-		</tr>
-	</tbody>
-</table>
+	<table>
+		<thead>
+			<tr>
+				<th>Position</th>
+				<th>Score</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="score in scores | orderBy: score : reverse track by $index" ng-show="$index < 5">
+				<td>#{{ $index + 1 }}</td>
+				<td>{{ score }}</td>
+			</tr>
+		</tbody>
+	</table>
 
--->
+	-->
+</div>
