--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -1,5 +1,6 @@
 <div ng-controller="gameController">	
 	<canvas id="gameCanvas" height="500" width="410"></canvas>
-	<p>Score: {{ score }}</p>
-	<p>This is the game page</p>
+	<p id="yourScore">Score: {{ score }}</p>
+	<a ng-href="#/game" id="again">Start Over</a>
+	<a ng-href="#/highscores" id="topScores">Top Scores</a>
 </div>
