--- a/TimeStamp/public/stylesheets/style.css
+++ b/TimeStamp/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
-  padding: 50px;
+  padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
