--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -10,7 +10,7 @@
           <div class="col-md-12 text-center">
             <h1 class="text-muted">Pong</h1><hr>
             
-            <form id ="authentication" class="form-horizontal" role="form">
+            <form id ="signInForm" class="form-horizontal" role="form">
               <div class="form-group">
                 <div class="col-sm-2">
                   <label for="inputEmail3" class="control-label">Email</label>
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <form role="form">
+            <form id="createForm" role="form">
               <div class="form-group">
                 <label class="control-label" for="exampleInputName1">Name</label>
                 <input class="form-control" id="exampleInputName1" placeholder="Name" type="text">
