--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -55,16 +55,16 @@
           <div class="col-md-12">
             <form id="createForm" role="form">
               <div class="form-group">
-                <label class="control-label" for="exampleInputName1">Name</label>
-                <input class="form-control" id="exampleInputName1" placeholder="Name" type="text">
+                <label class="control-label" for="InputName1">Name</label>
+                <input class="form-control" id="InputName1" placeholder="Name" type="text">
               </div>
               <div class="form-group">
-                <label class="control-label" for="exampleInputEmail1">Email address</label>
-                <input class="form-control" id="exampleInputEmail1" placeholder="Enter email" type="email">
+                <label class="control-label" for="InputEmail1">Email address</label>
+                <input class="form-control" id="InputEmail1" placeholder="Enter email" type="email">
               </div>
               <div class="form-group">
-                <label class="control-label" for="exampleInputPassword1">Password</label>
-                <input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
+                <label class="control-label" for="InputPassword1">Password</label>
+                <input class="form-control" id="InputPassword1" placeholder="Password" type="password">
               </div>
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
