--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <form id="createForm" role="form">
+            <form id="createForm" role="form" action="javascript:void(0);">
               <div class="form-group">
                 <label class="control-label" for="InputName1">Name</label>
                 <input class="form-control" id="InputName1" placeholder="Name" type="text">
