--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -66,7 +66,7 @@
                 <label class="control-label" for="InputPassword1">Password</label>
                 <input class="form-control" id="InputPassword1" placeholder="Password" type="password">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button id="createSubmit" type="submit" class="btn btn-primary">Submit</button>
             </form>
           </div>
         </div>
