--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -34,7 +34,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <button type="submit" class="btn btn-lg btn-primary">Sign in</button>
+                <button type="submit" id="signInSubmit" class="btn btn-lg btn-primary">Sign in</button>
               </div>
             </form>
             <br>
