--- a/MongoDBreakout/public/javascripts/app/views/highscoresView.html
+++ b/MongoDBreakout/public/javascripts/app/views/highscoresView.html
@@ -11,6 +11,10 @@
 			</tr>
 		</thead>
 		<tbody>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
 			<tr ng-repeat="score in highscores | orderBy: score : reverse track by $index" ng-show="$index < 10">
 				<td>{{ score.Name }}</td>
 				<td>{{ score.Score }}</td>
