high scores view

--- a/MongoDBreakout/public/javascripts/app/views/highscoresView.html
+++ b/MongoDBreakout/public/javascripts/app/views/highscoresView.html
@@ -1,7 +1,6 @@
 <div ng-controller="highscoresController">	
-	<a ng-href="#/game" id="again">Play Again</a>
 
-	<p>This is the high scores page</p>
+	<p>Top 10 High Scores</p>
 
 	<table id="highScoresTable">
 		<thead>
@@ -21,6 +20,8 @@
 			</tr>
 		</tbody>
 	</table>
+
+	<a ng-href="#/game" id="again">Play Again</a>
 
 
 </div>
