--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -11,14 +11,16 @@
             <h1 class="text-muted">Pong</h1><hr>
             
             <form id ="signInForm" class="form-horizontal" role="form">
+              
               <div class="form-group">
                 <div class="col-sm-2">
                   <label for="inputEmail3" class="control-label">Email</label>
                 </div>
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                  <input type="text" class="form-control" id="inputEmail3" placeholder="Username">
                 </div>
               </div>
+              
               <div class="form-group">
                 <div class="col-sm-2">
                   <label for="inputPassword3" class="control-label">Password</label>
@@ -27,16 +29,13 @@
                   <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                 </div>
               </div>
-              <div class="form-group">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox">Remember me</label>
-                </div>
-              </div>
+
               <div class="form-group">
                 <button type="submit" id="signInSubmit" class="btn btn-lg btn-primary">Sign in</button>
               </div>
+
             </form>
+
             <br>
             <br>
             <a class="btn btn-lg btn-primary">Create an Account</a>
@@ -44,6 +43,7 @@
         </div>
       </div>
     </div>
+    
     <div class="section">
       <div class="container">
         <div class="row">
@@ -54,19 +54,18 @@
         <div class="row">
           <div class="col-md-12">
             <form id="createForm" role="form" action="javascript:void(0);">
+              
               <div class="form-group">
-                <label class="control-label" for="InputName1">Name</label>
-                <input class="form-control" id="InputName1" placeholder="Name" type="text">
+                <label class="control-label" for="InputEmail1">Username</label>
+                <input class="form-control" id="InputEmail1" placeholder="Enter Username" type="text">
               </div>
-              <div class="form-group">
-                <label class="control-label" for="InputEmail1">Email address</label>
-                <input class="form-control" id="InputEmail1" placeholder="Enter email" type="email">
-              </div>
+             
               <div class="form-group">
                 <label class="control-label" for="InputPassword1">Password</label>
                 <input class="form-control" id="InputPassword1" placeholder="Password" type="password">
               </div>
               <button id="createSubmit" type="submit" class="btn btn-primary">Submit</button>
+            
             </form>
           </div>
         </div>
