--- a/MongoDBreakout/public/javascripts/app/views/highscoresView.html
+++ b/MongoDBreakout/public/javascripts/app/views/highscoresView.html
@@ -5,7 +5,7 @@
 	<table id="highScoresTable">
 		<thead>
 			<tr>
-				<th>Name</th>
+				<th>Username</th>
 				<th>Score</th>
 			</tr>
 		</thead>
@@ -14,13 +14,13 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
-			<tr ng-repeat="score in highscores | orderBy: score : reverse track by $index" ng-show="$index < 10">
-				<td>{{ score.Name }}</td>
+			<!-- <tr ng-repeat="score in highscores | orderBy: score : reverse track by $index" ng-show="$index < 10"> -->
+			<tr ng-repeat="score in highscores">
+				<td>{{ score.Username }}</td>
 				<td>{{ score.Score }}</td>
 			</tr>
 		</tbody>
 	</table>
-	<br/>
 	<br/>
 	<br/>
 	<a ng-href="#/game" id="again">Play Again</a>
