--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -14,7 +14,7 @@
               
               <div class="form-group">
                 <div class="col-sm-2">
-                  <label for="inputEmail3" class="control-label">Email</label>
+                  <label for="inputEmail3" class="control-label">Username</label>
                 </div>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="inputEmail3" placeholder="Username">
@@ -38,7 +38,6 @@
 
             <br>
             <br>
-            <a class="btn btn-lg btn-primary">Create an Account</a>
           </div>
         </div>
       </div>
@@ -56,8 +55,8 @@
             <form id="createForm" role="form" action="javascript:void(0);">
               
               <div class="form-group">
-                <label class="control-label" for="InputEmail1">Username</label>
-                <input class="form-control" id="InputEmail1" placeholder="Enter Username" type="text">
+                <label class="control-label" for="InputName1">Username</label>
+                <input class="form-control" id="InputName1" placeholder="Enter Username" type="text">
               </div>
              
               <div class="form-group">
