--- a/MongoDBreakout/public/stylesheets/style.css
+++ b/MongoDBreakout/public/stylesheets/style.css
@@ -40,3 +40,8 @@ h1 {
 	border-bottom: 1px solid #000;
 	text-align: center;
 }
+
+#highScoresTable th, td {
+	padding-left: 20px;
+	padding-right: 20px;
+}
