--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -8,7 +8,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1 class="text-muted">Pong</h1><hr>
+            <div class="loginTab activeTab">Create Account</div>
+            <div class="loginTab">Sign in</div>
+
+            <hr>
             
             <form id ="signInForm" class="form-horizontal" role="form">
               
