--- a/MongoDBreakout/public/stylesheets/style.css
+++ b/MongoDBreakout/public/stylesheets/style.css
@@ -15,6 +15,21 @@ a {
   color: #ccc;
 }
 
+.loginTab {
+	display: inline-block;
+    margin: 20px 0px -10px 0px;
+    padding: 10px 0px;
+    background: #6DB4F3;
+    background: rgba(111,182,243,0.35);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 50%;
+}
+
+.activeTab {
+	background: #337AB7;
+}
+
 #theGameCanvas {
 	height: 500px;
 	width: 410px;
