--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -8,8 +8,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="loginTab activeTab">Create Account</div>
-            <div class="loginTab">Sign in</div>
+            <div id="tabs">
+              <div class="loginTab activeTab">Create Account</div>
+              <div class="loginTab">Sign in</div>
+            </div>
 
             <hr>
             
