--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -22,7 +22,7 @@
                   <label for="inputEmail3" class="control-label">Username</label>
                 </div>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3" placeholder="Username">
+                  <input type="text" class="form-control" id="inputEmail3">
                 </div>
               </div>
               
@@ -31,7 +31,7 @@
                   <label for="inputPassword3" class="control-label">Password</label>
                 </div>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                  <input type="password" class="form-control" id="inputPassword3">
                 </div>
               </div>
 
@@ -57,6 +57,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
+          <!--
             <form id="createForm" role="form" action="javascript:void(0);">
               
               <div class="form-group">
@@ -71,6 +72,36 @@
               <button id="createSubmit" type="submit" class="btn btn-primary">Submit</button>
             
             </form>
+          -->
+
+            <form id ="createForm" class="form-horizontal" role="form">
+              
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="InputName1" class="control-label">Username</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="InputName1">
+                </div>
+              </div>
+              
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="InputPassword1" class="control-label">Password</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="InputPassword1">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <button type="submit" id="createSubmit" class="btn btn-lg btn-primary">Sign in</button>
+              </div>
+
+            </form>
+
+
+
           </div>
         </div>
       </div>
