--- a/MongoDBreakout/public/stylesheets/style.css
+++ b/MongoDBreakout/public/stylesheets/style.css
@@ -17,6 +17,8 @@ a {
 
 #tabs {
 	text-align: left;
+	margin-bottom: -13px;
+	margin-top: 40px;
 }
 
 .loginTab {
@@ -27,6 +29,7 @@ a {
     background: rgba(111,182,243,0.35);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    cursor: pointer;
 }
 
 .activeTab {
