--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -4,17 +4,21 @@
 
 	<div class="cover">
       
-      <div class="cover-image" style="background-image : url('https://unsplash.imgix.net/photo-1418065460487-3e41a6c84dc5?w=1024&amp;q=50&amp;fm=jpg&amp;s=127f3a3ccf4356b7f79594e05f6c840e')"></div>
       <div class="container">
+        
         <div class="row">
           <div class="col-md-12 text-center">
             <div id="tabs">
               <div class="loginTab activeTab">Create Account</div>
               <div class="loginTab">Sign in</div>
             </div>
+          </div>
+        </div>
 
-            <hr>
-            
+        <hr>
+
+        <div class="row">
+          <div class="col-md-12 text-center">
             <form id ="signInForm" class="form-horizontal" role="form">
               
               <div class="form-group">
@@ -36,25 +40,14 @@
               </div>
 
               <div class="form-group">
-                <button type="submit" id="signInSubmit" class="btn btn-lg btn-primary">Sign in</button>
+                <button type="submit" id="signInSubmit" class="btn btn-lg btn-primary">Sign In</button>
               </div>
 
             </form>
 
-            <br>
-            <br>
           </div>
         </div>
-      </div>
-    </div>
-    
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>Create an Account</h1>
-          </div>
-        </div>
+      
         <div class="row">
           <div class="col-md-12">
           <!--
@@ -95,15 +88,16 @@
               </div>
 
               <div class="form-group">
-                <button type="submit" id="createSubmit" class="btn btn-lg btn-primary">Sign in</button>
+                <button type="submit" id="createSubmit" class="btn btn-lg btn-primary">Create Account</button>
               </div>
 
             </form>
 
-
-
           </div>
         </div>
+
       </div>
-    </div>
+
+  </div>
+
 </div>
