--- a/MongoDBreakout/public/javascripts/app/views/highscoresView.html
+++ b/MongoDBreakout/public/javascripts/app/views/highscoresView.html
@@ -1,6 +1,6 @@
 <div ng-controller="highscoresController">	
 
-	<p>Top 10 High Scores</p>
+	<h3>Top 10 High Scores</h3>
 
 	<table id="highScoresTable">
 		<thead>
