--- a/MongoDBreakout/public/stylesheets/style.css
+++ b/MongoDBreakout/public/stylesheets/style.css
@@ -60,6 +60,7 @@ a:hover {
 
 h1 {
 	letter-spacing: 12px;
+	margin-bottom: 50px;
 }
 
 #yourScore {
@@ -86,7 +87,7 @@ h1 {
 
 
 /* MEDIA QUERIES */
-@media (max-width: 500px) {
+@media (max-width: 600px) {
 	h1 {
 		font-size: 20px;
 	}
