--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -21,10 +21,10 @@
               
               <div class="form-group">
                 <div class="col-sm-2">
-                  <label for="inputEmail3" class="control-label">Username</label>
+                  <label for="inputName3" class="control-label">Username</label>
                 </div>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="inputEmail3">
+                  <input type="text" class="form-control" id="inputName3">
                 </div>
               </div>
               
