fixing ball location

--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -1,6 +1,7 @@
 <div ng-controller="gameController">	
 	<canvas id="gameCanvas" height="500" width="410"></canvas>
 	<p id="yourScore">Score: {{ score }}</p>
-	<a ng-href="#/game" id="again">Start Over</a>
+	<!-- <a ng-href="#/game" id="again">Start Over</a> -->
+	<p id="again">Start Over</p>
 	<a ng-href="#/highscores" id="topScores">Top Scores</a>
 </div>
