--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -43,6 +43,8 @@
 
             </form>
 
+            <p class="errorMsg">Incorrect username or password</p>
+
           </div>
         </div>
       
@@ -74,6 +76,8 @@
               </div>
 
             </form>
+
+            <p class="errorMsg">Username already taken</p>
 
           </div>
         </div>
