--- a/MongoDBreakout/public/javascripts/app/views/authenticateView.html
+++ b/MongoDBreakout/public/javascripts/app/views/authenticateView.html
@@ -44,6 +44,8 @@
             </form>
 
             <p class="errorMsg">Incorrect username or password</p>
+            <p class="missingUsername">Please enter a username</p>
+            <p class="missingPassword">Please enter a password</p>
 
           </div>
         </div>
@@ -78,6 +80,8 @@
             </form>
 
             <p class="errorMsg">Username already taken</p>
+            <p class="missingUsername">Please enter a username</p>
+            <p class="missingPassword">Please enter a password</p>
 
           </div>
         </div>
