--- a/BestMusic/public/stylesheets/style.css
+++ b/BestMusic/public/stylesheets/style.css
@@ -1,8 +1,14 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	margin: 50px 10%;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
+}
+
+.oneSong {
+	display: inline-block;
+	padding: 10px 20px;
+	margin-bottom: 10px;
 }
