--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -1,4 +1,5 @@
 <div ng-controller="gameController">	
+	<p>Use Left and Right Arrow Keys To Move</p>
 	<canvas id="gameCanvas" height="500" width="410"></canvas>
 	<p id="yourScore">Score: {{ score }}</p>
 	<!-- <a ng-href="#/game" id="again">Start Over</a> -->
