removing top scores button from game view

--- a/MongoDBreakout/public/javascripts/app/views/gameView.html
+++ b/MongoDBreakout/public/javascripts/app/views/gameView.html
@@ -3,5 +3,5 @@
 	<canvas id="gameCanvas" height="500" width="410"></canvas>
 	<p id="yourScore">Score: {{ score }}</p>
 	<!-- <a ng-href="#/game" id="again">Start Over</a> -->
-	<a ng-href="#/highscores" id="topScores">Top Scores</a>
+	<!-- <a ng-href="#/highscores" id="topScores">Top Scores</a> -->
 </div>
