--- a/URLShortener/public/stylesheets/style.css
+++ b/URLShortener/public/stylesheets/style.css
@@ -1,8 +1,13 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
   color: #00B7FF;
+}
+
+p {
+	margin: 20px;
 }
