--- a/URLShortener/public/stylesheets/style.css
+++ b/URLShortener/public/stylesheets/style.css
@@ -1,11 +1,14 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  text-align: center;
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1, h3 {
+	text-align: center;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
 }
 
 p {
