--- a/URLShortener/public/stylesheets/style.css
+++ b/URLShortener/public/stylesheets/style.css
@@ -3,8 +3,13 @@ body {
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-h1, h3 {
+h1 {
 	text-align: center;
+	margin-bottom: 40px;
+}
+
+h3 {
+	text-align: left;
 }
 
 a {
