--- a/Imgur/public/stylesheets/style.css
+++ b/Imgur/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+h3 {
+	text-align: left;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
+}
+
+p {
+	margin: 20px;
 }
