--- a/ConnectFour/style.css
+++ b/ConnectFour/style.css
@@ -16,28 +16,26 @@ h1 {
 
 #gameContainer {
 	position: relative;
-	margin: auto;
+	margin: 30px auto;
 	text-align: center;
+	overflow: hidden;
+	width: 490px;
 }
 
 #connect4Logo {
 	display: block;
 	margin: auto;
-	margin-top: -60px;
-	margin-bottom: 0px;
 }
 
 #gridTop, #redWin, #blackWin, #start {
 	height: 70px;
 	width: 490px;
 	background-color: #ffc0cb;
-	margin-bottom: 10px;
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 10px;
+	margin: 0px auto 10px;
 	text-align: center;
 	font-size: 40px;
 	position: relative;
+	border-radius: 10px;
 }
 
 #gridTop {
@@ -50,8 +48,8 @@ h1 {
 	z-index: 20;
 	line-height: 70px;
 	height: 70px;
+	margin: auto;
 	margin-bottom: 0px;
-	left: 196px;
 }
 
 #start {
@@ -73,7 +71,8 @@ h1 {
 	margin: auto;
 	background-color: rgb(62, 62, 234);
 	border-radius: 0px 0px 10px 10px;
-	z-index: 11;
+	z-index: 20;
+	position: relative;
 }
 
 #reset {
@@ -86,7 +85,8 @@ h1 {
 	text-align: center;
 	color: #fff;
 	border-radius: 0px 0px 10px 10px;
-	z-index: 11;
+	z-index: 20;
+	position: relative;
 	cursor: pointer;
 }
 
@@ -113,12 +113,12 @@ h1 {
 
 .droppedP1 {
 	background-color: #f00 !important;
-	cursor: auto !important;
+	cursor: default !important;
 }
 
 .droppedP2 {
 	background-color: #000 !important;
-	cursor: auto !important;
+	cursor: default !important;
 }
 
 .p2 {
