--- a/styles/style.css
+++ b/styles/style.css
@@ -25,10 +25,6 @@ footer {
     max-width: 960px;
 }
 
-/*.img-responsive {
-    border-radius: 10px;
-}*/
-
 h3,
 h4 {
     text-align: center;
@@ -41,66 +37,59 @@ p {
 
 /* Header */
 
-.header {
+header {
     background-color: #fff;
-    height: 160px;
     text-align: center;
+    margin: 0;
+    padding: 30px 10px;
 }
 
-.header h1 {
+header h1 {
     color: #31363d;
     font-size: 32px;
-    margin: 0 auto;
-    position: relative;
-    top: 44px;
-}
-
-.header p {
-    position: relative;
-    top: 45px;
+    margin: 0;
 }
 
 
 /* Navigation */
 
-.nav {
-    background: #AAA;
+nav {
+    background: #aaa;
     margin-bottom: 20px;
 }
 
-.nav ul {
+nav ul {
     margin: 0;
     text-align: center;
     list-style: none;
     padding: 30px 0px 0px 0px;
 }
 
-.nav li {
+nav li {
     display: inline-block;
 }
 
-.nav li a {
-    -webkit-transition: color 0.25s;
-    transition: color 0.25s;
+nav li a {
+    -webkit-transition: color 0.5s;
+    transition: color 0.5s;
     color: #fff;
     padding: 0px 10px;
+}
+
+nav li a:hover {
+    color: #31363d;
     text-decoration: none;
 }
 
-.nav li a:hover {
-    color: #31363d;
-    cursor: pointer;
-    -webkit-transition: color 1s;
-    transition: color 1s;
-}
-
 /* Tile */
+
 .tile {
     border: 1px solid #000;
     border: 1px solid rgba(0, 0, 0, 0.3);
     background: #fff;
     box-shadow: #555 3px 3px 20px 1px;
     height: 386px;
+    margin-bottom: 30px;
 }
 
 .tile .projectName {
@@ -110,6 +99,10 @@ p {
     margin: 0;
     text-align: center;
     font-weight: bold;
+}
+
+.tile .img-responsive {
+    width: 100%;
 }
 
 .tile .projectNotes {
@@ -132,8 +125,7 @@ p {
 /* Separator */
 
 .separator {
-    background: #AAA;
-    width: 100%;
+    background: #aaa;
     height: 50px;
     margin-bottom: 20px;
     text-align: center;
@@ -144,41 +136,6 @@ p {
     width: 30px;
     margin: 10px 15px;
 }
-
-
-/* Web Applications */
-
-/*#applications p {
-    text-align: center;
-}*/
-
-
-/* Website Designs */
-
-/*#webDesign p {
-    text-align: center;
-}*/
-
-
-/* Data Visualizations */
-
-/*#dataVisualizations p {
-    text-align: center;
-}*/
-
-
-/* Microservices */
-
-/*#microservices p {
-    text-align: center;
-}
-*/
-
-/* Games */
-
-/*#games p {
-    text-align: center;
-}*/
 
 
 /* About */
@@ -198,6 +155,7 @@ p {
 
 #skills h4 {
     margin-top: 30px;
+    font-weight: bold;
 }
 
 
@@ -210,7 +168,7 @@ p {
 
 /* Footer */
 
-.footer {
+footer {
     text-align: right;
     text-transform: uppercase;
     margin: 20px 0px 10px 0px;
@@ -219,49 +177,13 @@ p {
 
 /* Media Queries */
 
-@media (min-width: 922px) {
-    #skills #soft {
-        margin-top: 60px;
-    }
-}
-
-@media (min-width: 692px) {
-    .col-md-4 {
-        display: inline-block;
-    }
-}
-
-@media (max-width: 992px) {
-    .col-md-4 {
-        width: 32.95%;
-    }
-}
-
-@media (max-width: 692px) {
-    .img-responsive {
-        margin: auto;
-    }
-    .col-md-4 {
-        margin-bottom: 30px;
+@media screen and (max-width: 480px) {
+    .col-xs-6 {
+        display: block;
         width: 100%;
     }
-    .row {
-        margin-top: 0px;
-    }
-    .container h3 {
-        margin-bottom: 30px;
-    }
-    #skills p {
-        margin-bottom: 20px;
-    }
-}
-
-@media (max-width: 500px) {
-    .row {
-        margin-top: 0;
-    }
-    #work .row {
-        margin-top: 30px;
+    .tile {
+        height: auto;
     }
 }
 
